--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My second github repo</title>
 </head>
 <body>
-    
+    <h1>I can push to github</h1>
+    <h1>my second github repo</h1>
+    <h3>new code changed</h3>
 </body>
 </html>
