--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
     <h3>new code changed</h3>
     <p>more paragraph</p>
     <p>more coding coding</p>
+    <img src="images/IMG_7603.JPG" alt=""height ="100" width="100"><br>
+    <img src="images/IMG_7614.JPG" alt=""height = "100" width="100">
 </body>
 </html>
